# PvpNFTService

./: .env  .gitignore  Cargo.toml  README.md  hardhat.config.ts  package-lock.json  package.json
artifacts/contracts/FishNFT.sol/: FishNFT.dbg.json  FishNFT.json
artifacts/contracts/Pvp.sol/: Pvp.dbg.json  Pvp.json
cache/: solidity-files-cache.json  validations.json
contracts/: FishNFT.sol  Pvp.sol
fishingGame/Config/: DefaultEngine.ini  DefaultGame.ini
fishingGame/Content/: map.umap
fishingGame/Saved/Autosaves/: PackageRestoreData.json
fishingGame/Saved/Config/WindowsEditor/: EditorPerProjectUserSettings.ini  (+1 more)
fishingGame/Saved/SourceControl/: UncontrolledChangelists.json
move_contract/: .mvconfig.json  move.toml
move_contract/fishnft/: move.toml
move_contract/fishnft/sources/: FishNFT.move  collection.move  erc721.move
move_contract/modules/: hello.move
move_contract/scripts/: run_hello.move
move_contract/sources/: FishNFT.move
move_contract/token/: move.toml
move_contract/token/sources/: LuckToken.move
public/: index.html
scripts/: deploy.ts  nft.ts
src/: .env  App.tsx  connetion.rs  contract_connect.rs  error.rs  index.tsx  main.rs  styles.css  transferNFT.rs
src/components/: MyNavbar.tsx  PETR.ts  abi.js
src/pages/: Equipment.tsx  Fish.tsx  FishInfo.tsx  Fishing.tsx  MyEquipment.tsx  MyFish.tsx  Store.tsx
test/: TestPVP.ts  quick_dev.rs
typechain-types/: hardhat.d.ts  index.ts
typechain-types/contracts/: FishNFT.ts  Pvp.ts  index.ts
typechain-types/factories/contracts/: FishNFT__factory.ts  Pvp__factory.ts  index.ts
(+38 files in other folders)
