[package]
name = "PvpService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1",features=["derive"]}
serde_json="1"
rand = "0.8.0"
ethers = "1.0.2"
postgres = "0.19"
hex = "0.4"
web3 = "0.17.0"
tokio = { version= "1", features = ["full"] }
dotenv = "0.15.0"
secp256k1 = "0.20.3"
hex-literal = "0.3"
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"